--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,25 @@ dist
 .vscode
 .env
 **/.env
+# Virtual environment
+env/
+venv/
+.venv/
 
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Environment variables
+.env
+**/.env
+
+# SDK/Config
+.adk/
+
+# IDE
+.vscode/
+.idea/
+*.swp
