--- a/first_agent/.gitignore
+++ b/first_agent/.gitignore
@@ -1,2 +1,25 @@
 .env
 **/.env
+
+# Virtual environment
+env/
+venv/
+.venv/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# Environment variables
+.env
+**/.env
+
+# SDK/Config
+.adk/
+
+# IDE
+.vscode/
+.idea/
+*.swp
